objects/Livi__c.object
<CustomObject>
    <fields>
        <fullName>Cream__c</fullName>
        <label>Cream</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lakme</fullName>
                </value>
                <value>
                    <fullName>Olay</fullName>
                </value>
                <value>
                    <fullName>Ponds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FullName__c</fullName>
        <label>FullName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perfume__c</fullName>
        <label>Perfume</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Livi</label>
    <nameField>
        <label>Livi Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Livis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>